# gaindot

./: README.md
backend/: docker-compose.yaml  readme.md
backend/flask/: .gitignore  Dockerfile  delete_frames.py  ff_mp4.py  gunicorn_config.py  requirements.txt  server.py  video.py  video.webm
backend/flask/uploads/: blob
backend/gain_dot_backend_pallet/: Cargo.toml
backend/gain_dot_backend_pallet/pallets/gain_dot/: Cargo.toml
backend/gain_dot_backend_pallet/pallets/gain_dot/src/: lib.rs  tests.rs
backend/gain_dot_backend_pallet/runtime/src/: lib.rs
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/users/: page.jsx
frontend/src/app/claim_nft/: page.tsx
frontend/src/app/crypto/: page.tsx
frontend/src/app/nfts/: page.tsx
frontend/src/app/ntfs/: page.tsx
frontend/src/app/workout/: page.tsx
frontend/src/components/: Bird.js  Identicon.js  Pipe.js  PolkadotComponents.js  PolkadotComponents.tsx  PolkadotProvider.js  PolkadotProvider.tsx  Transfer.js  apple-card-standard.tsx  damn_good_card.tsx  dapp_auth.jsx  hero.tsx  multistep.tsx  navbar.tsx  pinDemo.tsx  video.js  video.jsx  videoRecord.jsx
frontend/src/components/auth/: page.tsx
frontend/src/components/game/: page.jsx
frontend/src/components/mongo/: mongoStore.js
frontend/src/components/ui/: accordion.tsx  floating-navbar.tsx  multi-step-loader.tsx
frontend/src/lib/: Address.json  Instruction.json  firebase.js  mongodb.js  nft.json  recentTransactions.json  utils.ts
