[package]
name = "gain_dot"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
frame-support = { version = "4.0.0-dev", default-features = false }
frame-system = { version = "4.0.0-dev", default-features = false }
sp-runtime = { version = "4.0.0-dev", default-features = false }
sp-std = { version = "4.0.0-dev", default-features = false }


[lints]
workspace = true
